--- a/css/demo.css
+++ b/css/demo.css
@@ -15,3 +15,11 @@
       transform:scale(1);
 	}
 }
+.component-fade-enter-active,
+.coomponent-fade-leave-active{
+transition:opacity.3s ease;
+}
+.component-fade-enter,
+.component-fade-leave-to{
+	opacity:0;
+}
